[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Effects/ScreenShaker.gd" type="Script" id=1]

[node name="ScreenShaker" type="Node"]
script = ExtResource( 1 )

[node name="TweenShake" type="Tween" parent="."]

[node name="Frequency" type="Timer" parent="."]

[node name="Duration" type="Timer" parent="."]
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.7
one_shot = true

[connection signal="timeout" from="Frequency" to="." method="_on_Frequency_timeout"]
[connection signal="timeout" from="Duration" to="." method="_on_Duration_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
